@@ -77,6 +77,10 @@ main(int    argc,
 	g_option_context_free(ctx);
 
 	connection = dbus_bus_get(DBUS_BUS_SESSION, NULL);
+	if (connection == NULL) {
+		g_printerr("Failed to get a session bus.\n");
+		return 1;
+	}
 	imsettings = imsettings_request_new(connection, IMSETTINGS_INTERFACE_DBUS);
   retry:
 	if (imsettings_request_get_version(imsettings, NULL) != IMSETTINGS_SETTINGS_DAEMON_VERSION) {
